name:                warp-async-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/warp-async-test#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable warp-async-test
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , http-types
                     , wai
                     , warp
  default-language:    Haskell2010
